--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -1,8 +1,8 @@
-ul {
+.message {
 	list-style-type: none;
 }
 
-ul > li {
+.message li {
 	text-align: center;
 	margin-bottom: 10px;
 	padding-top: 3px;
@@ -12,6 +12,6 @@ ul > li {
 	color: #fff;
 }
 
-li > p {
+.message p {
 	text-transform: uppercase;
 }
