--- a/src/components/Message/MessageList.module.css
+++ b/src/components/Message/MessageList.module.css
@@ -1,23 +1,30 @@
 .messageBlock {
 	list-style-type: none;
-	padding: 0;
+	width: 50%;
+	margin: 0 auto;
+	background-color:aliceblue;
+	padding:20px 0;
+	border-radius: 10px;
 }
 
 .message{
-	text-align:center;
-	padding: 0 10px;
+	margin: 0 auto;
 	margin-bottom: 10px;
-	width: 200px;
-	background-color: rgb(221, 221, 221);
-	color: #000;
+	max-width: 300px;
+	height: 25px;
+	padding: 10px 20px;
+	border-radius: 50px;
+	background-color: rgb(0, 0, 0);
+	color: #fff;
 }
 
 .user {
-	font-size: 14px;
+	font-size: 19px;
+	font-weight: 700;
+	margin-right: 20px;
+	color: rgb(85, 139, 220);
 }
 
 .text {
-	font-size: 18px;
-	font-weight: 700;
+	font-size: 18px;	
 }
-
