--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -4,3 +4,11 @@
 	text-align: center;
 	margin-top: 10px;
 }
+
+.input {
+	padding: 5px 15px;
+	border-right: none;
+	outline: none;
+	border-radius: 20px 0 0 20px;
+	border-color: rgb(247, 90, 90);
+}
